--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title:
+title: MPG Portfolio
 email:
-description: > # this means to ignore newlines until "baseurl:"
+description: > "Data Science Portfolio"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
