--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # the subpath of your site, e.g. /blog/
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://micgonzalez.github.io" # the base hostname & protocol for your site
 
-twitter_username:
+twitter_username: lsdesignfirm
 github_username: micgonzalez
 
 # Build settings
