Updating _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "https://micgonzalez.github.io" # the base hostname & protocol for your sit
 
 twitter_username: MPG_Portfolio
 github_username: micgonzalez
+linkedin_username: micgonz/
 
 # Build settings
 markdown: kramdown
