--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 
-email: micgonzalez@my365.bellevue.edu
+email: ds.mpg.portfolio@gmail.com
 description: > # the subpath of your site, e.g. /blog/
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://micgonzalez.github.io" # the base hostname & protocol for your site
